lab1/Test/L1-A-7-40.cmm
int kjVfOwS [ 1567648259 ] 
;
int iBXB_QouwKR ( struct SdkqSVFooxCHv5C TSJO8UYHdUgvhO 
  , struct wptWJPkyZrS_ wPK_makTCILpTV9W50l8 ) {
  struct whAsyW_gWBT3J9REH0 OxXKS7FBD ;
  MItj_J ;
`}
struct {
  float wsu00Ahp = vlv5ginvOeHxO || y && pFXfMfqMhixi44n_oMIb 
    != HwtKfcHA8aNkqkvl + CdxzZBx ( Jw_zkdLHBNcq4OFx , 
    gEelYBaXNj = eNvDt = BoZkMR < CYdOz_wMBRNz8gWXT3 / 
    ! - U051V7R [ yyaEsIKXQS && h8XkTzodi9MKAKrhV <= y0CQzFuEEdDU19Kg 
    [ reRfbWbs0G2qB8TKL = AsgscOV9WYqE6zR8pvU = msLGL32yo 
    && wHilPEWv4 >= ( LpJQLcKqfw == cH2PAB1DoegAATWpp3 
    * eNCxDrREFWoqgAZ ( kxmJGLgo7aKRGIfGBg3 , U4L , - 
    - ! CPRs [ MPSn2ZhXtBA '&& akefPovHBVf5OTo8 > uaSYufXVthkcROfrG 
    ] ) + qSvaqr4AfNHNOpR8DJID ) ] * - xGDOGCjt2Ht9pxQ8 
    . zaTRoD - 1721754834 . Klk8iZoStamM8Zr - fsZp ( ) 
    * ! 1064025073.321850527 ] ) , gcac4pcZgpKLGlW ;
};
struct FEn5GS2Eo88So {
};
int ;
int ;
int ;
int eq1 ( ) {
  YIF7 ;
'  NPUfffV ;
  vOA5LcLekjla84V ;
  MZ3qXRjrWBoxbGKBLun ;
  IhFODg5cDgelpI04oD7X ;
  if ( U4czgtkTZjD6NcQvC ) {
    if ( pilZVq7ViuSNFw )     yZ60sohWe_gV51n ;
else     AOd8l4SEgC4yGL8y ;

  }else   if ( ZO4gizvIAekwdeN )   while ( GUf5 ) 
      return @jQNZvMnR ;



}
int xDqeMUN ( ) {
}
int SMs4Gd4K4dGtPTsSF2 , Wo 

;
